[gd_scene load_steps=47 format=3]

[ext_resource type="Script" path="res://Script/Main_menu/Main_Menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7wqiaf2bewop" path="res://Art/MainGame/Bg1.png" id="2"]
[ext_resource type="FontFile" uid="uid://dd7mrrqjy1xru" path="res://Font/Aa我读山月山月独我_mianfeiziti.com.ttf" id="3"]
[ext_resource type="FontFile" uid="uid://0bcwbxanna5n" path="res://Font/Aa文徵明琴赋小楷_mianfeiziti.com.ttf" id="4"]
[ext_resource type="FontFile" uid="uid://db4gwqvqgggtj" path="res://Font/Aa梦里掏花对月饮_mianfeiziti.com.ttf" id="5"]
[ext_resource type="Texture2D" uid="uid://t8l066v8xryp" path="res://Art/game_pic/679.PNG" id="6"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[sub_resource type="StyleBoxEmpty" id="26"]
script = null

[sub_resource type="StyleBoxEmpty" id="27"]
script = null

[sub_resource type="StyleBoxEmpty" id="28"]
script = null

[sub_resource type="StyleBoxEmpty" id="29"]
script = null

[sub_resource type="StyleBoxEmpty" id="30"]
script = null

[sub_resource type="StyleBoxEmpty" id="31"]
script = null

[sub_resource type="StyleBoxEmpty" id="32"]
script = null

[sub_resource type="StyleBoxEmpty" id="33"]
script = null

[sub_resource type="StyleBoxEmpty" id="34"]
script = null

[sub_resource type="StyleBoxEmpty" id="35"]
script = null

[sub_resource type="StyleBoxEmpty" id="36"]
script = null

[sub_resource type="StyleBoxEmpty" id="37"]
script = null

[sub_resource type="StyleBoxEmpty" id="38"]
script = null

[sub_resource type="StyleBoxEmpty" id="39"]
script = null

[sub_resource type="StyleBoxEmpty" id="40"]
script = null

[node name="Main_Menu" type="Node2D"]
process_mode = 3
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="background" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(470, 295)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="name" type="Label" parent="background"]
offset_left = 270.0
offset_top = -239.0
offset_right = 422.0
offset_bottom = -196.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 30
text = "造梦西游之"
metadata/_edit_lock_ = true

[node name="name2" type="Label" parent="background/name"]
layout_mode = 0
offset_left = -43.0
offset_top = 44.0
offset_right = 210.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0.945098, 0.556863, 0, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.556863, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 18
text = "《八荒湮隳篇·力战七大魔王》"
metadata/_edit_lock_ = true

[node name="title" type="Label" parent="background"]
offset_left = -434.0
offset_top = -288.0
offset_right = 240.0
offset_bottom = -261.0
theme_override_colors/font_color = Color(1, 0.396078, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.396078, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 18
text = "作者：B站早春樱花，作品免费，严禁各平台进行买卖，商业用途，严禁修改，破解。更新内容看游戏内公告！"
metadata/_edit_lock_ = true

[node name="ButtonList" type="VBoxContainer" parent="."]
offset_left = 686.0
offset_top = 131.0
offset_right = 940.0
offset_bottom = 588.0
theme_override_constants/separation = -7
metadata/_edit_lock_ = true

[node name="Begin_game" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "读取存档"

[node name="fgx_1" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="music" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "切换音乐"

[node name="fgx_2" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="gmae_help" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "游戏帮助"

[node name="fgx_3" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="tiaoguo" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "跳过剧情"

[node name="fgx_4" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="changeBg" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/pressed = SubResource( "23" )
theme_override_styles/disabled = SubResource( "24" )
theme_override_styles/focus = SubResource( "25" )
text = "切换背景"

[node name="fgx_5" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="GameSet" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "26" )
theme_override_styles/hover = SubResource( "27" )
theme_override_styles/pressed = SubResource( "28" )
theme_override_styles/disabled = SubResource( "29" )
theme_override_styles/focus = SubResource( "30" )
text = "游戏设置"

[node name="fgx_6" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="GameWarn" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "31" )
theme_override_styles/hover = SubResource( "32" )
theme_override_styles/pressed = SubResource( "33" )
theme_override_styles/disabled = SubResource( "34" )
theme_override_styles/focus = SubResource( "35" )
text = "游戏须知"

[node name="fgx_7" type="TextureRect" parent="ButtonList"]
layout_mode = 2
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="Letter" type="Button" parent="ButtonList"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "36" )
theme_override_styles/hover = SubResource( "37" )
theme_override_styles/pressed = SubResource( "38" )
theme_override_styles/disabled = SubResource( "39" )
theme_override_styles/focus = SubResource( "40" )
text = "给玩家的一封信"

[node name="ar_infer" type="Node2D" parent="."]
position = Vector2(1, 3)

[node name="Music_set" type="Node2D" parent="."]
position = Vector2(744, 218)
metadata/_edit_lock_ = true

[node name="BGset" type="Node2D" parent="."]
position = Vector2(470, 295)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ButtonList/Begin_game" to="." method="_on_begin_game_pressed" flags=18]
[connection signal="pressed" from="ButtonList/music" to="." method="_on_music_pressed" flags=18]
[connection signal="pressed" from="ButtonList/gmae_help" to="." method="_on_gmae_help_pressed" flags=18]
[connection signal="pressed" from="ButtonList/tiaoguo" to="." method="_on_tiaoguo_pressed" flags=18]
[connection signal="pressed" from="ButtonList/changeBg" to="." method="_on_change_bg_pressed" flags=18]
[connection signal="pressed" from="ButtonList/GameSet" to="." method="_on_game_set_pressed" flags=18]
[connection signal="pressed" from="ButtonList/GameWarn" to="." method="_on_game_warn_pressed" flags=18]
[connection signal="pressed" from="ButtonList/Letter" to="." method="_on_letter_pressed" flags=18]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed" flags=18]
